2009-10-15  Matthew Mundell <matthew.mundell@intevation.de>

	* misc/openvas_server.c (openvas_server_open, openvas_server_close)
	(openvas_server_connect, openvas_server_attach, openvas_server_send)
	(openvas_server_free): Drop SIGPIPE during writes.

2009-10-15  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/omp.c (omp_modify_task_file): Change content arg element type to
	void.  Add a content_length arg.

	* omp/omp.h: Update header.

2009-10-15  Matthew Mundell <matthew.mundell@intevation.de>

	* misc/openvas_logging.c (openvas_log_silent): New function.

	* misc/openvas_logging.h: Remove param names.  Add #endif comment.
	(openvas_log_silent): New header.

2009-10-15  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Refactored openvas_certificate_file to be able to parse text directly
	(in contrast to reading it from a file).

	* base/openvas_certificate_file.c: Declared string parameters const.
	(openvas_certificate_file_from_keyfile): New, extracted from
	openvas_certificate_file_read.
	(openvas_certificate_file_read): Call extracted method.
	(openvas_certificate_file_read_buffer): New. Reads from buffer, instead
	of from file.
	base/openvas_certificate_file.h: Adjusted protos.

2009-10-14  Matthew Mundell <matthew.mundell@intevation.de>

	* omp/omp.c (omp_get_report): Add a format arg.
	(omp_get_report_format): New function.

	* omp/omp.h: Update headers.

2009-10-14  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	Refactored hash_table_file to be able to parse text directly (in
	contrast to reading it from a file).

	* misc/hash_table_file.c (hash_table_from_gkeyfile): New. Extracted
	from hash_table_read.
	(hash_table_read_text): New. Parse some textbuffer as GKeyFile.
	(hash_table_read): Call extracted method.
	misc/hash_table_file.h: Adjusted protos.

2009-10-14  Michael Wiegand <michael.wiegand@intevation.de>

	* nasl/nasl.c (main): Made command line options more
	consistent with other modules and coding standards. Short option for